--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -10,7 +10,9 @@
 @import 'components/functions'; // All functions
 @import 'components/colors'; // Color swatches currently moved into settings
 @import 'components/settings'; // All settings
-@import 'components/grid'; // Grid functionality
+@import 'components/media-queries'; // All possible media queries
+//@import 'components/grid'; // Grid functionality
+@import 'components/flex-grid'; // Grid functionality
 @import 'components/normalize'; // Remove browser default styles add Material default styles
 @import 'components/shadows'; // Shadow depths
 @import 'components/typography'; // Typography
