--- a/stylesheets/scss/components/_textfields.scss
+++ b/stylesheets/scss/components/_textfields.scss
@@ -12,9 +12,11 @@ $textfield-border-size: rem-calc(2px);
 
 	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"], textarea {
 		border: none;
-		border-bottom: $textfield-border-size solid $grey;
+		border-bottom: $textfield-border-size solid if($theme == light, rgba($black, .38), rgba($white, .5));
 		outline: none;
 		position: absolute;
+		background: none;
+		color: if($theme == light, rgba($black, .87), rgba($white, 1));
 		width: 100%;
 		@include transition(all $transition-small-duration $basic-transition);
 
@@ -26,8 +28,13 @@ $textfield-border-size: rem-calc(2px);
 			@include transition(all $transition-large-duration $basic-transition);
 		}
 
+		&:hover {
+			color: if($theme == light, rgba($black, .54), rgba($white, .7));
+		}
+
 		&:active, &:focus {
 			border-bottom: $textfield-border-size solid $textfield-on-color;
+			color: if($theme == light, rgba($black, .87), rgba($white, 1));
 
 			+ label {
 				color: $textfield-on-color;
@@ -37,9 +44,10 @@ $textfield-border-size: rem-calc(2px);
 		&:disabled, &:disabled:active, &:disabled:focus {
 			background: none;
 			border-bottom: $textfield-border-size dotted $textfield-disabled-color;
+			color: if($theme == light, rgba($black, .38), rgba($white, .5));
 
 			+ label {
-				color: $grey;
+				color: if($theme == light, rgba($black, .38), rgba($white, .5));
 			}
 		}
 
