--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -6,17 +6,20 @@
  **************************************/
 
 // Style
-@import 'style/_mixins'; // All mixins
-@import 'style/_functions'; // All functions
-@import 'style/_colors'; // Color swatches currently moved into settings
-@import 'material/_settings'; // All settings
-@import 'material/_media-queries'; // All possible media queries
-//@import 'components/grid'; // Grid functionality
-@import 'material/_flex-grid'; // Grid functionality
-@import 'material/_normalize'; // Remove browser default styles add Material default styles
-@import 'material/_shadows'; // Shadow depths
-@import 'style/_typography'; // Typography
-@import 'style/_icons'; // Icons with their shadow (can be turned off)
+@import 'style/mixins'; // All mixins
+@import 'style/functions'; // All functions
+@import 'style/colors'; // Color swatches currently moved into settings
+@import 'material/settings'; // All settings
+@import 'material/media-queries'; // All possible media queries
+//@import 'material/grid'; // Grid functionality
+@import 'material/flex-grid'; // Grid functionality
+@import 'material/normalize'; // Remove browser default styles add Material default styles
+
+$shadow-depths: ('0', '1', '2', '3', '4', '6', '8', '9', '10', '12', '16', '24');
+@import 'material/shadows'; // Shadow depths (Can be turned off)
+
+@import 'style/typography'; // Typography
+@import 'style/icons'; // Icons with their shadow (can be turned off)
 
 // Components
 @import 'components/appbar'; // Top menu bar (can be turned off)
@@ -27,24 +30,23 @@ $bottom-nav: ('bottom-nav', 'bottom-shifting');
 $bottom-sheet: ('header', 'grid', 'music');
 @import 'components/bottom-sheet'; // Used to style bottom sheet / modal (can be turned off)
 
-$button: ('raised', 'flat', /*'floating', 'toggle'*/);
+$button: ('raised', 'flat', 'floating', 'toggle');
 @import 'components/buttons'; // Used to style buttons (can be turned off)
 
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/data-tables'; // Used to style tables (can be turned off)
-
-$dialog: ('full-screen');
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
 
 @import 'components/expansion-panels'; // Used to style expansion panels (can be turned off)
 @import 'components/grid-lists'; // Used to style grid lists (can be turned off)
+@import 'components/menu'; // Used to style menus (can be turned off)
 
 $navigation-drawer: ('full-height', 'clipped', 'floating', 'persistent', 'temporary');
-@import 'patterns/_navigation-drawer'; // Used to style navigation drawer (can be turned off)
+@import 'patterns/navigation-drawer'; // Used to style navigation drawer (can be turned off)
 
 @import 'components/lists'; // Used to style lists (can be turned off)
-@import 'patterns/_notifications'; // Notifications style (can be turned off)
+@import 'patterns/notifications'; // Notifications style (can be turned off)
 @import 'components/pickers'; // Used to style date and time picker (can be turned off)
 
 $progress: ('determinate', 'indeterminate', 'buffer', 'circular'); // It's better to turn off "buffer" since it isn't working properly
@@ -68,4 +70,5 @@ $textfield: ('floating', 'floating-dense', 'single', 'single-dense', 'multi');
 @import 'components/textfields'; // Used to style input (can be turned off)
 
 @import 'components/tooltips'; // Used to style tooltips (can be turned off)
-@import 'style/_colors-create'; // Used to create colors(can be turned off)
+//@import 'material/waves'; // Used to create waves/ ripple (can be turned off)
+@import 'style/colors-create'; // Used to create colors(can be turned off)
