--- a/stylesheets/scss/style/_mixins.scss
+++ b/stylesheets/scss/style/_mixins.scss
@@ -36,6 +36,19 @@
 	$directAlpha: ( 24 - decimal-round( $dp / 10 ) ) / 100;
 
 	@include box-shadow( 0 $ambientY $ambientBlur 0 rgba(0, 0, 0, $ambientAlpha) unquote(',') 0 $directY $directBlur 0 rgba(0, 0, 0, $directAlpha) );
+
+	@media #{$medium-up} {
+		$dp: $dp - 2;
+		$ambientY: rem-calc( $dp + 0px );
+		$ambientBlur: rem-calc( if( $dp == 1, 3, $dp * 2 ) + 0px );
+		$ambientAlpha: ( $dp + 10 + ( $dp / 9.38 ) ) / 100;
+
+		$directY: rem-calc( if( $dp < 10, if( $dp % 2 == 0, $dp - ( ( $dp / 2 ) - 1 ), ( $dp - ( ( $dp - 1 ) / 2 ) ) ), $dp - 4 ) + 0px );
+		$directBlur: rem-calc( if( $dp == 1, 3, $dp * 2 ) + 0px );
+		$directAlpha: ( 24 - decimal-round( $dp / 10 ) ) / 100;
+
+		@include box-shadow( 0 $ambientY $ambientBlur 0 rgba(0, 0, 0, $ambientAlpha) unquote(',') 0 $directY $directBlur 0 rgba(0, 0, 0, $directAlpha) );
+	}
 }
 
 @mixin transition( $settings ) {
@@ -165,6 +178,13 @@
 			font-size: rem-calc($small-font-size+0px);
 		}
 	}
+}
+
+@mixin radial-gradient( $setting ) {
+	background: -webkit-radial-gradient($setting);
+	background: -o-radial-gradient($setting);
+	background: -moz-radial-gradient($setting);
+	background: radial-gradient($setting);
 }
 
 @mixin scrollbar() {
