Started on creating css variables, improved dialogs

--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -10,6 +10,7 @@
 @import 'components/functions'; // All functions
 @import 'components/colors'; // Color swatches currently moved into settings
 @import 'components/settings'; // All settings
+@import 'components/root'; // All CSS variables
 @import 'components/media-queries'; // All possible media queries
 //@import 'components/grid'; // Grid functionality
 @import 'components/flex-grid'; // Grid functionality
