--- a/stylesheets/scss/components/_menu.scss
+++ b/stylesheets/scss/components/_menu.scss
@@ -13,6 +13,8 @@
 	@include flex-container(column, null);
 	@include border-radius(rem-calc(2px));
 	padding: rem-calc(8px) 0;
+	white-space: nowrap;
+	text-align: left;
 	z-index: 4;
 	@include transition(max-width $transition-small-duration $basic-transition unquote(',') max-height $transition-small-duration $basic-transition);
 
@@ -73,4 +75,20 @@
 
 select.sc-select {
 	display: none;
+}
+
+div.sc-select {
+	height: rem-calc(48px);
+	padding: rem-calc(16px) 0 rem-calc(8px) 0;
+	border-bottom: $textfield-border-size solid if($theme == light, rgba($black, .38), rgba($white, .5));
+	position: relative;
+	margin: 0 0 rem-calc(8px) 0;
+
+	.sc-menu {
+		top: 0;
+	}
+
+	.sc-active {
+		color: $main-color;
+	}
 }
