--- a/stylesheets/scss/components/_navigation-drawer.scss
+++ b/stylesheets/scss/components/_navigation-drawer.scss
@@ -135,6 +135,10 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
 			z-index: 3;
 
+			.sc-menu {
+				top: $gutter;
+			}
+
 			header, .sc-drawer-header {
 				height: $appbar-mobile-portrait-height;
 				line-height: $appbar-mobile-portrait-height;
@@ -258,6 +262,10 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 			z-index: 3;
 			@include material-shadow(16);
 
+			.sc-menu {
+				top: $drawer-profile-img + $drawer-padding + ($drawer-profile-content-height / 2);
+			}
+
 			header, .sc-drawer-header {
 				padding: 0 0 $drawer-profile-bottom-padding 0;
 				margin: 0 0 $drawer-profile-bottom-padding 0;
@@ -320,13 +328,6 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 					top: $drawer-profile-img + $drawer-padding + ($drawer-profile-content-height / 2);
 					text-align: right;
 					position: relative;
-
-					.sc-menu {
-						z-index: 4;
-						top: $gutter;
-						right: 0;
-						left: auto;
-					}
 
 					.material-icons {
 						margin: (($drawer-profile-content-height / 4) * -1) ($gutter * -1) 0 0;
@@ -456,5 +457,11 @@ $drawer-profile-height: $drawer-padding + $drawer-profile-img + $drawer-profile-
 		&:hover {
 			background: none;
 		}
+	}
+
+	.sc-menu {
+		position: fixed;
+		z-index: 4;
+		left: rem-calc(4px);
 	}
 }
