--- a/stylesheets/scss/components/_tabs.scss
+++ b/stylesheets/scss/components/_tabs.scss
@@ -37,9 +37,10 @@ $tab-padding: rem-calc(12px);
 	}
 
 	.sc-tab, .sc-tab-icon, .sc-tab-icon-text {
+		@include flex-item(1, 0);
 		border-bottom: $tab-indicator-size solid $tab-background;
 		color: $tab-font-color;
-		display: inline-block;
+		//display: inline-block;
 		font-size: rem-calc(14px);
 		font-weight: 500;
 		max-width: rem-calc(264px);
@@ -47,6 +48,7 @@ $tab-padding: rem-calc(12px);
 		text-align: center;
 		text-overflow: ellipsis;
 		text-transform: uppercase;
+		white-space: nowrap;
 		@include transition(border $transition-small-duration $basic-transition unquote(',') color $transition-small-duration $basic-transition);
 
 		@media #{$small-up} {
