--- a/stylesheets/scss/components/_dialogs.scss
+++ b/stylesheets/scss/components/_dialogs.scss
@@ -10,7 +10,7 @@
 	visibility: hidden;
 	@include opacity(0);
 	position: fixed;
-	width: auto;
+	width: 100%;
 	@include border-radius(rem-calc(2px));
 	z-index: 5;
 	top: 50%;
@@ -24,6 +24,7 @@
 	}
 
 	@media #{$medium-up} {
+		width: auto;
 		@include transition(all $transition-large-duration $basic-transition);
 		max-width: calc(100% - ( 2 * #{$large-gutter}));
 	}
