Fixed bugs in sliders

--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -6,14 +6,13 @@
  **************************************/
 // More menu
 $appbar-more-margin: rem-calc(4px); // Default rem-calc(4px)
-
 $appbar-icon-default-size: $appbar-mobile-portrait-height - ($gutter * 2);
 $appbar-icon-landscape-size: $appbar-mobile-landscape-height - ($gutter * 2);
 $appbar-icon-portrait-size: $appbar-icon-default-size;
 $appbar-icon-large-size: $appbar-large-height - (rem-calc(20px) * 2);
 
 .sc-appbar {
-	@include box-shadow(rem-calc(0px) rem-calc(2px) rem-calc(4px) rem-calc(-1px) rgba($black, .2) unquote(',') rem-calc(0px) rem-calc(4px) rem-calc(5px) rem-calc(0px) rgba($black, .14) unquote(',') rem-calc(0px) rem-calc(1px) rem-calc(10px) rem-calc(0px) rgba($black, .12));
+	@include material-shadow(4);
 	background: $appbar-background;
 	color: $appbar-text;
 	line-height: normal;
