--- a/stylesheets/scss/components/_notifications.scss
+++ b/stylesheets/scss/components/_notifications.scss
@@ -13,7 +13,7 @@ $notification-image-size: rem-calc(40px);
 
 .sc-notification {
 	@include material-shadow(3);
-	@include border-radius(rem-calc(2px));
+	@include border-radius($border-size);
 	background: $notification-background;
 	float: left;
 	max-width: 100%;
