--- a/stylesheets/scss/components/_root.scss
+++ b/stylesheets/scss/components/_root.scss
@@ -6,7 +6,7 @@
 	--main-color: $main-color;
 	--secondary-color: $secondary-color;
 	--background: if( $theme == light, $white, #303030);
-	--border-radius: $border-radius;
+	--border-radius: $border-size;
 	--gutter: $gutter;
 	--large-gutter: $large-gutter;
 }
