--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -5,7 +5,7 @@
  **************************************/
 
 $selection-size: rem-calc($font-size-body-1+0px);
-$selection-border-size: rem-calc(2px);
+$selection-border-size: $border-size;
 
 input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 	@include opacity(0);
@@ -34,7 +34,7 @@ input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 	input[type="checkbox"].sc-checkbox {
 		// Off
 		+ label:before {
-			@include border-radius(rem-calc(2px));
+			@include border-radius($border-size);
 			@include transition(background $transition-small-duration $basic-transition unquote(',') content $transition-small-duration $basic-transition unquote(',') border $transition-small-duration $basic-transition);
 
 			@media #{$medium-only} {
@@ -129,7 +129,7 @@ input[type="checkbox"].sc-checkbox, input[type="radio"].sc-radio {
 		// On
 		&:checked + label {
 			&:before {
-				border: rem-calc(2px) solid $selection-active-color;
+				border: $border-size solid $selection-active-color;
 			}
 
 			&:after {
